// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing App shows About Component with a button 1`] = `
<div
  className="container-box"
>
  <img
    alt="logo"
    height={200}
    src={
      Object {
        "default": "placeholder-file",
      }
    }
    width={200}
  />
  <div>
    <h3 />
  </div>
  <br />
  <div>
    <button
      className=""
      data-baseweb="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
    >
      logout
    </button>
  </div>
  <br />
  <div>
    <p />
  </div>
</div>
`;

exports[`With Snapshot Testing App shows App Component 1`] = `
<div>
  <img
    alt="logo"
    height={200}
    src={
      Object {
        "default": "placeholder-file",
      }
    }
    width={200}
  />
  <div>
    <h3>
      text
    </h3>
  </div>
  <div
    className="container"
  >
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div
          className="input-wrapper"
        >
          <label
            htmlFor="email"
          >
            Email
          </label>
          <br />
          <input
            id="email"
            onBlur={[Function]}
            onChange={[Function]}
            type="email"
            value=""
          />
          <br />
        </div>
      </div>
      <div>
        <div
          className="input-wrapper"
        >
          <label
            htmlFor="password"
          >
            password
          </label>
          <br />
          <input
            id="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
          <br />
        </div>
      </div>
      <br />
      <div>
        <button
          className=""
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          login
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`With Snapshot Testing App shows Button 1`] = `
<button
  className=""
  data-baseweb="button"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
/>
`;

exports[`With Snapshot Testing App shows Hello World heading and form 1`] = `
<div>
  <main>
    <div>
      <img
        alt="logo"
        height={200}
        src={
          Object {
            "default": "placeholder-file",
          }
        }
        width={200}
      />
      <div>
        <h3>
          text
        </h3>
      </div>
      <div
        className="container"
      >
        <form
          action="#"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div>
            <div
              className="input-wrapper"
            >
              <label
                htmlFor="email"
              >
                Email
              </label>
              <br />
              <input
                id="email"
                onBlur={[Function]}
                onChange={[Function]}
                type="email"
                value=""
              />
              <br />
            </div>
          </div>
          <div>
            <div
              className="input-wrapper"
            >
              <label
                htmlFor="password"
              >
                password
              </label>
              <br />
              <input
                id="password"
                onBlur={[Function]}
                onChange={[Function]}
                type="password"
                value=""
              />
              <br />
            </div>
          </div>
          <br />
          <div>
            <button
              className=""
              data-baseweb="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              login
            </button>
          </div>
        </form>
      </div>
    </div>
  </main>
</div>
`;

exports[`With Snapshot Testing App shows Home Component with form 1`] = `
<div
  className="container"
>
  <form
    action="#"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div>
      <div
        className="input-wrapper"
      >
        <label
          htmlFor="email"
        >
          Email
        </label>
        <br />
        <input
          id="email"
          onBlur={[Function]}
          onChange={[Function]}
          type="email"
          value=""
        />
        <br />
      </div>
    </div>
    <div>
      <div
        className="input-wrapper"
      >
        <label
          htmlFor="password"
        >
          password
        </label>
        <br />
        <input
          id="password"
          onBlur={[Function]}
          onChange={[Function]}
          type="password"
          value=""
        />
        <br />
      </div>
    </div>
    <br />
    <div>
      <button
        className=""
        data-baseweb="button"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        login
      </button>
    </div>
  </form>
</div>
`;

exports[`With Snapshot Testing App shows Image 1`] = `
<img
  alt="logo"
  height={200}
  width={200}
/>
`;

exports[`With Snapshot Testing App shows Input Field 1`] = `
<div
  className="input-wrapper"
>
  <label />
  <br />
  <input />
  <br />
</div>
`;
